--- a/content/panorama/styles/custom_game/team_select.css
+++ b/content/panorama/styles/custom_game/team_select.css
@@ -231,7 +231,7 @@
 #StartGameCountdownTimer.countdown_inactive #TimerBg,
 #StartGameCountdownTimer.countdown_inactive #TimerRing,
 #StartGameCountdownTimer.countdown_inactive #TimerLabelAutoStart,
-#StartGameCountdownTimer.countdown_inactive #TimerLabelGameStart,
+#StartGameCountdownTimer.countdown_inactive #TimerLabelGameStart
 {
     opacity: 0;
 }
